--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "server": "nodemon index"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.19.0",
     "constantinople": ">=3.1.1",
+    "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
