--- a/all-sights/package.json
+++ b/all-sights/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
+    "select-pure": "^0.6.0-alpha.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
